--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ __pycache__/
 __init__/
 logger/migrations/
 
+# Custom dirs
+BOT_X/
+
 # C extensions
 *.so
 # Distribution / packaging
@@ -121,7 +124,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-../.env
+.env
 env/
 venv/
 ENV/
@@ -158,3 +161,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+.idea
